<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.wallpapersapp.ui.screens.imagedetailsfragment.ImageDetailsViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/image_details_fragment_xml_constraintlayout3_scene"
        tools:context=".ui.screens.imagedetailsfragment.ImageDetailsFragment">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/main_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_bar"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bottom_navbar_corners"
            app:itemIconTint="@color/black"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/image_details_menu"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_open_small"
            style="@style/myFabStyle"
            android:contentDescription="@string/small_image"
            android:src="@drawable/ic_fullscreen_exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_open_full"
            style="@style/myFabStyle"
            android:contentDescription="@string/full_image"
            android:src="@drawable/ic_fullscreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:id="@+id/desktop_wallpaper_text_view"
                style="@style/myTextViewStyle"
                android:text="@string/wallpapers_to_work_table"
                app:drawableLeftCompat="@drawable/ic_wallpaper" />

            <TextView
                android:id="@+id/lock_screen_text_view"
                style="@style/myTextViewStyle"
                android:text="@string/blocked_screen"
                app:drawableLeftCompat="@drawable/ic_wallpaper" />

            <TextView
                android:id="@+id/save_to_fav_text_view"
                style="@style/myTextViewStyle"
                android:paddingBottom="@dimen/textPaddingBottom"
                android:text="@string/save_to_fav"
                app:drawableLeftCompat="@drawable/ic_favorite" />


        </LinearLayout>

        <include
            android:id="@+id/about"
            layout="@layout/image_information_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_image_view"
            bind:viewModel="@{viewModel}" />
        <WebView
            android:backgroundTint="@color/white"
            android:id="@+id/show_portfolio_web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>